syntax = "proto3";

package auth;

import "google/api/annotations.proto";

option go_package = "profiles.v1;profilesv1";

service Profiles {
  rpc Create(CreateRequest) returns (CreateResponse);

  rpc GetMe(GetMeRequest) returns (GetMeResponse) {
    option (google.api.http) = {
      get: "/v1/profiles/me"
    };
  }
}

message CreateRequest {
  string email = 1;
};

message CreateResponse {
  string email = 1;
};

message GetMeRequest {
  string email = 1;
};

message GetMeResponse {
  string email = 1;
};
